[gd_scene load_steps=3 format=2]

[ext_resource path="res://Events/SceneTransition.tscn" type="PackedScene" id=1]
[ext_resource path="res://Chapters/ThanksForPlaying.gd" type="Script" id=2]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Intro" type="Node2D" parent="."]

[node name="SceneTransition" parent="Intro" instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
